feature:Optimize the query and page interaction of the whitelist